# TKX_ThreadX

./: .clang-format  .editorconfig  .gitignore  TKX_ThreadX.ioc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-build.yml
AZURE_RTOS/App/: app_azure_rtos.c
App/Inc/: app_main.h
App/Src/: app_main.c
BSP/Inc/: bsp_debug.h  bsp_sysview.h  bsp_w25qxx.h
BSP/Src/: bsp_sysview.c  bsp_w25qxx.c
Bootloader/: Bootloader.ioc  C-STAT Messages.txt
Bootloader/Comm/Inc/: comm_uart.h
Bootloader/Comm/Src/: comm_uart.c
Bootloader/Core/Inc/: boot_config.h  boot_crc.h  boot_jump.h  boot_main.h  boot_selftest.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Bootloader/Core/Src/: boot_crc.c  boot_jump.c  boot_main.c  boot_selftest.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c
Bootloader/EWARM/: Bootloader.board  Bootloader.ewp  Bootloader.eww  Project.eww  stm32f4xx_bootloader.icf
Bootloader/EWARM/Bootloader/: .ninja_deps  .ninja_log  compile_commands.json
Bootloader/Factory/Inc/: factory_calibration.h  factory_mode.h
Bootloader/Factory/Src/: factory_calibration.c  factory_mode.c
Bootloader/Storage/Inc/: storage_flash.h
Bootloader/Storage/Src/: storage_flash.c
CI/hooks/: pre-commit
CI/scripts/: build.ps1  build_bootloader.ps1  cstat_analyze.ps1
Core/Inc/: RTE_Components.h  main.h  sdio.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tx_user.h
Core/Src/: app_threadx.c  dma.c  gpio.c  iwdg.c  main.c  sdio.c  spi.c  stm32f4xx_it.c  system_stm32f4xx.c  wwdg.c
Docs/: README.md
Docs/CN/: APP_LAYER.md  ARCHITECTURE.md  BOOTLOADER.md  CI_CD_WORKFLOW.md  CODING_STANDARD.md  DOC_STYLE_GUIDE.md  FMEA.md  README.md  SAFETY_CHECKLIST.md  SAFETY_MODULES.md  SERVICES.md
Docs/EN/: APP_LAYER.md  ARCHITECTURE.md  BOOTLOADER.md  CI_CD_WORKFLOW.md  CODING_STANDARD.md  DOC_STYLE_GUIDE.md  FMEA.md  README.md  SAFETY_CHECKLIST.md  SAFETY_MODULES.md  SERVICES.md
EWARM/: Backup of TKX_ThreadX.ewd  Backup of TKX_ThreadX.ewp  Project.eww  TKX_ThreadX.ewd  TKX_ThreadX.ewp  stm32f407xx_flash.icf  stm32f407xx_sram.icf
EWARM/TKX_ThreadX/: .ninja_deps  .ninja_log
FileX/App/: app_filex.h  fx_user.h
Safety/Inc/: safety_config.h  safety_core.h  safety_flow.h  safety_monitor.h  safety_mpu.h  safety_params.h  safety_selftest.h  safety_stack.h  safety_watchdog.h
Safety/Src/: safety_core.c  safety_flow.c  safety_monitor.c  safety_mpu.c  safety_params.c  safety_selftest.c  safety_stack.c  safety_watchdog.c
Services/Inc/: svc_params.h
Services/Src/: svc_params.c
Shared/Inc/: shared_config.h
ci/hooks/: pre-commit
ci/scripts/: build_crun.ps1  generate_version.ps1
docs/: APP_LAYER.md  ARCHITECTURE.md  BOOTLOADER.md  CI_CD_WORKFLOW.md  CODING_STANDARD.md  README.md  SAFETY_CHECKLIST.md  SAFETY_MODULES.md  SERVICES.md
tests/: CMakeLists.txt
tests/mocks/: mock_hal.c  mock_hal.h
tests/unit/: test_runner.c  test_safety_flow.c
tests/unity/: README.md
